Fix attribute filter dropdown list z-index; (https://github.com/woocommerce/woocommerce-blocks/pull/6294)
was conflicting with other components like:
- sale badge
- all products placeholder items

--- a/plugins/woocommerce-blocks/assets/js/base/components/dropdown-selector/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/dropdown-selector/style.scss
@@ -147,7 +147,7 @@ $dropdown-selector-line-height: math.div(18, 14);
 	top: 100%;
 	max-height: 300px;
 	overflow-y: auto;
-	z-index: 1;
+	z-index: 10;
 
 	&:not(:empty) {
 		border: 1px solid #9f9f9f;
